<resources>
    <string name="app_name">Learn French</string>
    <string name="edit_message">Question</string>
    <string name="edit_answer">Answer</string>
    <string name="button_next">Next</string>
    <string name="button_take_test">Take Test</string>
    <string name="button_retake_test">Re-Take Test</string>
    <string name="button_start_again">Return to Start</string>
    <string name="results_view">Results View</string>
    <string name="button_finished">Finished</string>
    <string name="button_take_default_test">Take Standard Test</string>
    <string name="button_take_customised_test">Take Customised Test</string>
    <string name="button_view_stats">View Statistics</string>
    <string name="button_reset_stats">Reset Statistics</string>
</resources>
